--- a/app/views/years/projects/show.html.erb
+++ b/app/views/years/projects/show.html.erb
@@ -59,7 +59,9 @@
       <th>CM</th>
       <th>TD</th>
       <th>TP</th>
-      <th>Coût</th>
+      <% if current_user.admin %>
+        <th>Coût</th>
+      <% end %>
       <th>Heures enseignant</th>
       <th>Note</th>
       <th></th>
@@ -76,7 +78,9 @@
       <td><%= involvement.hours_td.round %></td>
       <td><%= involvement.hours_tp.round %></td>
       <td><%= involvement.teacher_hours.round %></td>
-      <td><%= number_to_currency involvement.teacher_hours_costs %></td>
+      <% if current_user.admin %>
+        <td><%= number_to_currency involvement.teacher_hours_costs %></td>
+      <% end %>
       <td><%= simple_format involvement.description %></td>
       <td>
         <%= link_to 'Modifier', edit_year_involvement_path(year_id: @year.id, id: involvement.id), class: 'btn btn-primary btn-xs' if can? :edit, involvement%>
