--- a/app/views/years/users/index.html.erb
+++ b/app/views/years/users/index.html.erb
@@ -30,59 +30,72 @@
 </div>
 <br><br><br>
 
-<table class="table table-hover table-striped">
-  <thead>
-    <tr>
-      <th style="min-width: 200px">Nom</th>
-      <th>Fonctionnaire</th>
-      <th>Titulaire</th>
-      <th>Service</th>
-      <th>Maquette</th>
-      <th>Delta   service / maquette</th>
-      <th>Surcoût (maquette)</th>
-      <th>EDT</th>
-      <th>EDT (heures pondérées)</th>
-      <th>Delta service / EDT pondéré</th>
-      <th>Surcoût (EDT)</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @users.each do |user| %>
-      <% next if user.nil? %>
-      <% if can? :show_service, user %>
-        <%
-        service = user.hours
-        planned = @year.planned_hours_for(user)
-        scheduled = @year.scheduled_hours_for(user)
-        scheduled_ponderated = @year.scheduled_hours_ponderated_for(user)
-        %>
-        <tr>
-          <td><%= link_to user, year_user_path(year_id: @year.id, id: user.id) %></td>
-          <td><%= 'Oui' if user.public %></td>
-          <td><%= 'Oui' if user.tenured %></td>
-          <td><%= service.round unless service.nil? %></td>
-          <td><%= planned.round %></td>
-          <%= render 'application/td_delta', value: planned, reference: service %>
-          <td><%= number_to_currency user.planned_cost_for_year(@year) %></td>
-          <td><%= scheduled.round %></td>
-          <td><%= scheduled_ponderated.round %></td>
-          <%= render 'application/td_delta', value: scheduled_ponderated, reference: service %>
-          <td><%= number_to_currency user.scheduled_cost_for_year(@year) %></td>
-        </tr>
-      <% else %>
-        <tr>
-          <td><%= user %></td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-          <td>-</td>
-        </tr>
-      <% end %>
-    <% end unless @year.users.nil? %>
-  </tbody>
-</table>
+<div class="table-responsive">
+  <table class="table table-hover table-bordered">
+    <thead>
+      <tr>
+        <th colspan="3">Personne</th>
+        <th colspan="8">Heures enseignants</th>
+        <th colspan="6">Heures étudiant</th>
+      </tr>
+      <tr>
+        <th style="min-width: 200px">Nom</th>
+        <th>Fonctionnaire</th>
+        <th>Titulaire</th>
+        <th>Service</th>
+        <th>Maquette</th>
+        <th>Δ service / maquette</th>
+        <th>Surcoût</th>
+        <th>EDT</th>
+        <th>Pondéré</th>
+        <th>Δ service / pondéré</th>
+        <th>Surcoût</th>
+        <th>Maquette</th>
+        <th>EDT</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+        <% next if user.nil? %>
+        <% if can? :show_service, user %>
+          <%
+          service = user.hours
+          planned = @year.planned_hours_for(user)
+          scheduled = @year.scheduled_hours_for(user)
+          scheduled_ponderated = @year.scheduled_hours_ponderated_for(user)
+          %>
+          <tr>
+            <td><%= link_to user, year_user_path(year_id: @year.id, id: user.id) %></td>
+            <td><%= 'Oui' if user.public %></td>
+            <td><%= 'Oui' if user.tenured %></td>
+            <td><%= service.round unless service.nil? %></td>
+            <td><%= planned.round %></td>
+            <%= render 'application/td_delta', value: planned, reference: service %>
+            <td><%= number_to_currency user.planned_cost_for_year(@year), precision: 0 %></td>
+            <td><%= scheduled.round %></td>
+            <td><%= scheduled_ponderated.round %></td>
+            <%= render 'application/td_delta', value: scheduled_ponderated, reference: service %>
+            <td><%= number_to_currency user.scheduled_cost_for_year(@year), precision: 0 %></td>
+            <td><%= @year.planned_hours_for(user, :teacher_hours).round %></td>
+            <td><%= @year.scheduled_student_hours_for(user).round %></td>
+          </tr>
+        <% else %>
+          <tr>
+            <td><%= user %></td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+            <td>-</td>
+          </tr>
+        <% end %>
+      <% end unless @year.users.nil? %>
+    </tbody>
+  </table>
+</div>
