--- a/app/views/years/users/show.html.erb
+++ b/app/views/years/users/show.html.erb
@@ -7,11 +7,14 @@
   <div class="col-md-2">
     <div class="text-xl"><%= @year.scheduled_hours_for(@user, :cm).round %><small>CM</small></div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2">
     <div class="text-xl"><%= @year.scheduled_hours_for(@user, :td).round %><small>TD</small></div>
   </div>
-  <div class="col-md-3">
+  <div class="col-md-2">
     <div class="text-xl"><%= @year.scheduled_hours_for(@user, :tp).round %><small>TP</small></div>
+  </div>
+  <div class="col-md-4">
+    <div class="text-xl"><%= @year.scheduled_student_hours_for(@user).round(2) %><small>heures étudiant</small></div>
   </div>
 </div>
 <p><%= @year.scheduled_hours_ponderated_for(@user).round %> heures avec CM pondérés</p>
