--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -5,8 +5,8 @@
       <p>Teach</p>
     </div>
     <p class="version">
-      <strong>Version 1.11</strong><br/>
-      Monument Valley
+      <strong>Version 2.2</strong><br/>
+      Journey
     </p>
     <% if current_user %>
       <%= link_to('Déconnexion', destroy_user_session_path, method: :delete, class: 'btn btn-default btn-xs') %>
