--- a/app/views/discuss/year.html.erb
+++ b/app/views/discuss/year.html.erb
@@ -8,17 +8,18 @@
   <% end %>
 </ul>
 
-<div id='timeline' style="width: 100%; height: 600px"></div>
-<script type="text/javascript">
-  var data = <%= { events: @year.projects.collect(&:to_event) }.to_json.html_safe %>;
-  var config = { language: 'fr', initial_zoom: 1 };
-  new TL.Timeline('timeline', data, config);
-</script>
-
 <% Semester.all.each do |semester| %>
   <h3 id="semester<%= semester.id %>"><%= semester %></h3>
   <% projects = @year.projects.in_semester(semester) %>
   <p><%= projects.count %> projets</p>
+  <hr>
+  <div id='timeline-s<%= semester.id %>' style="width: 100%; height: 600px"></div>
+  <script type="text/javascript">
+    var data = <%= { events: projects.collect(&:to_event) }.to_json.html_safe %>;
+    var config = { language: 'fr', initial_zoom: 1 };
+    new TL.Timeline('timeline-s<%= semester.id %>', data, config);
+  </script>
+  <hr>
   <table class="table table-hover">
     <thead>
       <tr>
