--- a/app/views/years/projects/_form.html.erb
+++ b/app/views/years/projects/_form.html.erb
@@ -1,27 +1,25 @@
-<%= semantic_form_for [@year, @project] do |f| %>
-  <%= f.inputs do %>
-    <div class="row">
-      <div class="col-md-4">
-        <%= f.input :label %>
-        <%= f.input :sublabel %>
-        <%= f.input :year_id, as: :hidden %>
-        <%= f.input :user, label: 'Responsable' %>
-        <%= f.input :description, input_html: { rows: 5 } %>
-        <%= f.input :detailed_description, input_html: { rows: 15 } %>
-        <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
-      </div>
-      <div class="col-md-4">
-        <%= f.input :position, label: 'N° de semaine (début de l\'atelier)' %>
-        Soit le <%= l @project.from if @project.from %>.
-        <%= f.input :to, label: 'Fin de l\'atelier', html5: true %>
-        <%= f.input :semesters, as: :check_boxes, label: 'Semestres' %>
-        <%= f.input :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
-      </div>
-      <div class="col-md-4">
-        <%= f.input :users, as: :check_boxes, label: 'Personnes impliquées'  %>
-      </div>
+<%= simple_form_for [@year, @project] do |f| %>
+  <div class="row">
+    <div class="col-md-4">
+      <%= f.input :label %>
+      <%= f.input :sublabel %>
+      <%= f.input :year_id, as: :hidden %>
+      <%= f.input :user, label: 'Responsable' %>
+      <%= f.input :description, input_html: { rows: 5 } %>
+      <%= f.input :detailed_description, input_html: { rows: 15 } %>
+      <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
     </div>
-    <%= f.input :objectives, as: :check_boxes, member_label: :objective_with_module %>
-  <% end %>
+    <div class="col-md-4">
+      <%= f.input :position, label: 'N° de semaine (début de l\'atelier)' %>
+      Soit le <%= l @project.from if @project.from %>.
+      <%= f.input :to, label: 'Fin de l\'atelier', html5: true %>
+      <%= f.association :semesters, as: :check_boxes, label: 'Semestres' %>
+      <%= f.association :fields, as: :check_boxes, label: 'Champs', collection: Field.not_root %>
+    </div>
+    <div class="col-md-4">
+      <%= f.association :users, as: :check_boxes, label: 'Personnes impliquées'  %>
+    </div>
+  </div>
+  <%= f.input :objectives, as: :check_boxes, member_label: :objective_with_module %>
   <%= f.submit 'Enregistrer', class: 'btn btn-default' %>
 <% end %>
